Search for Ebay was implemented BaseData prive was changed to String because of currency variations

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
             <version>1.14</version>
         </dependency>
         <dependency>
+            <groupId>ru.yandex.qatools.htmlelements</groupId>
+            <artifactId>htmlelements-matchers</artifactId>
+            <version>1.8</version>
+        </dependency>
+        <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>2.47.1</version>
