JavaxMail.java now can download attachments and emails META_UA were removed from properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,4 @@ NATINT_EBAY_LINK=http://www.ebay.com
 #Email
 NATINT_EMAIL_LOGIN=natint.test@gmail.com
 NATINT_EMAIL_PASSWORD=Moonwalk1
-
-NATINT_EMAIL_PROTOCOL=pop3.meta.ua
-NATINT_EMAIL_META_UA=account_test@meta.ua
-NATINT_PASSWORD_META_UA=123456
+NATINT_EMAIL_PROTOCOL=imap.gmail.com
