--- a/pom.xml
+++ b/pom.xml
@@ -59,8 +59,11 @@
             <artifactId>gson</artifactId>
             <version>2.4</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-gmail</artifactId>
+            <version>v1-rev33-1.20.0</version>
+        </dependency>
         <dependency>
             <groupId>com.googlecode.gmail4j</groupId>
             <artifactId>gmail4j</artifactId>
